--- a/CountWithFriends/Base.lproj/Main.storyboard
+++ b/CountWithFriends/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -790,7 +790,7 @@
                                                     <action selector="onOperandTapped:" destination="4Ja-8D-CZh" eventType="touchUpInside" id="kBk-PT-nZV"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GuB-jB-TAC" customClass="GameButton" customModule="CountWithFriends" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GuB-jB-TAC" customClass="OperatorButton" customModule="CountWithFriends" customModuleProvider="target">
                                                 <rect key="frame" x="220" y="0.0" width="71.5" height="71.5"/>
                                                 <color key="backgroundColor" red="0.14117647058823529" green="1" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
@@ -807,7 +807,7 @@
                                                     <action selector="onOperatorTapped:" destination="4Ja-8D-CZh" eventType="touchUpInside" id="5Lv-7G-4jg"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NuF-Sp-tBh" customClass="GameButton" customModule="CountWithFriends" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NuF-Sp-tBh" customClass="OperatorButton" customModule="CountWithFriends" customModuleProvider="target">
                                                 <rect key="frame" x="293.5" y="0.0" width="71.5" height="71.5"/>
                                                 <color key="backgroundColor" red="0.14117647058823529" green="1" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
@@ -873,7 +873,7 @@
                                                     <action selector="onOperandTapped:" destination="4Ja-8D-CZh" eventType="touchUpInside" id="6CU-HM-EjW"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WlU-51-JYK" customClass="GameButton" customModule="CountWithFriends" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WlU-51-JYK" customClass="OperatorButton" customModule="CountWithFriends" customModuleProvider="target">
                                                 <rect key="frame" x="220" y="0.0" width="71.5" height="71.5"/>
                                                 <color key="backgroundColor" red="0.14117647058823529" green="1" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
@@ -889,7 +889,7 @@
                                                     <action selector="onOperatorTapped:" destination="4Ja-8D-CZh" eventType="touchUpInside" id="Tl3-bH-3JR"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CrG-17-2Et" customClass="GameButton" customModule="CountWithFriends" customModuleProvider="target">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CrG-17-2Et" customClass="OperatorButton" customModule="CountWithFriends" customModuleProvider="target">
                                                 <rect key="frame" x="293.5" y="0.0" width="71.5" height="71.5"/>
                                                 <color key="backgroundColor" red="0.14117647058823529" green="1" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
