--- a/CountWithFriends/Base.lproj/Main.storyboard
+++ b/CountWithFriends/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -971,17 +971,6 @@
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jsG-Fa-Ejb">
-                                                            <rect key="frame" x="325" y="6" width="30" height="30"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="jsG-Fa-Ejb" secondAttribute="height" multiplier="1:1" id="egS-bA-FRS"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                            <state key="normal" title="x"/>
-                                                            <connections>
-                                                                <action selector="onRemoveRowButtonTapped:" destination="GJF-w2-PwL" eventType="touchUpInside" id="170-5f-aXb"/>
-                                                            </connections>
-                                                        </button>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jz-jM-B6t">
                                                             <rect key="frame" x="120" y="11" width="49" height="21"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -1012,24 +1001,34 @@
                                                                 <action selector="onOutputValueTapped:" destination="GJF-w2-PwL" eventType="touchUpInside" id="Y02-BL-aAw"/>
                                                             </connections>
                                                         </button>
+                                                        <button hidden="YES" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jsG-Fa-Ejb">
+                                                            <rect key="frame" x="327" y="14" width="10" height="16"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="16" id="Jfd-tZ-lAd"/>
+                                                                <constraint firstAttribute="width" constant="10" id="YKs-KI-tug"/>
+                                                            </constraints>
+                                                            <state key="normal" image="Trash"/>
+                                                            <connections>
+                                                                <action selector="onRemoveRowButtonTapped:" destination="GJF-w2-PwL" eventType="touchUpInside" id="170-5f-aXb"/>
+                                                            </connections>
+                                                        </button>
                                                     </subviews>
                                                     <constraints>
                                                         <constraint firstItem="1jz-jM-B6t" firstAttribute="top" secondItem="xFP-vv-K6X" secondAttribute="top" constant="11" id="2kx-c1-ljz"/>
                                                         <constraint firstAttribute="bottom" secondItem="FWJ-Ed-xFc" secondAttribute="bottom" constant="11.5" id="3UZ-tG-ubI"/>
-                                                        <constraint firstAttribute="bottom" secondItem="jsG-Fa-Ejb" secondAttribute="bottom" constant="7.5" id="4wB-jc-a05"/>
                                                         <constraint firstItem="yYh-Sb-Ug2" firstAttribute="leading" secondItem="zTU-nv-rJi" secondAttribute="trailing" constant="8" id="D6C-VT-xRX"/>
                                                         <constraint firstAttribute="bottom" secondItem="0D8-A2-cgv" secondAttribute="bottom" constant="11.5" id="EnQ-wX-L3f"/>
                                                         <constraint firstItem="1jz-jM-B6t" firstAttribute="leading" secondItem="0D8-A2-cgv" secondAttribute="trailing" constant="8" id="IpP-U5-7nC"/>
                                                         <constraint firstItem="zTU-nv-rJi" firstAttribute="top" secondItem="xFP-vv-K6X" secondAttribute="top" constant="11" id="L2Y-h1-SdQ"/>
                                                         <constraint firstItem="yYh-Sb-Ug2" firstAttribute="top" secondItem="xFP-vv-K6X" secondAttribute="top" constant="6" id="LIq-ui-xPn"/>
                                                         <constraint firstAttribute="bottom" secondItem="1jz-jM-B6t" secondAttribute="bottom" constant="11.5" id="N3H-3p-KMO"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="jsG-Fa-Ejb" secondAttribute="trailing" constant="20" id="W05-eW-Rnc"/>
                                                         <constraint firstAttribute="bottom" secondItem="zTU-nv-rJi" secondAttribute="bottom" constant="11.5" id="YDy-zH-OVF"/>
+                                                        <constraint firstItem="jsG-Fa-Ejb" firstAttribute="centerY" secondItem="xFP-vv-K6X" secondAttribute="centerY" id="dmj-R8-vQK"/>
                                                         <constraint firstAttribute="bottom" secondItem="yYh-Sb-Ug2" secondAttribute="bottom" constant="7.5" id="hbe-k3-xVS"/>
                                                         <constraint firstItem="FWJ-Ed-xFc" firstAttribute="top" secondItem="xFP-vv-K6X" secondAttribute="top" constant="11" id="kVn-Ga-59d"/>
                                                         <constraint firstItem="FWJ-Ed-xFc" firstAttribute="leading" secondItem="1jz-jM-B6t" secondAttribute="trailing" constant="8" id="kuB-hA-fbd"/>
                                                         <constraint firstItem="0D8-A2-cgv" firstAttribute="leading" secondItem="xFP-vv-K6X" secondAttribute="leadingMargin" constant="55" id="qrM-1s-AMY"/>
-                                                        <constraint firstItem="jsG-Fa-Ejb" firstAttribute="top" secondItem="xFP-vv-K6X" secondAttribute="top" constant="6" id="rH8-1w-dkz"/>
-                                                        <constraint firstAttribute="trailing" secondItem="jsG-Fa-Ejb" secondAttribute="trailing" constant="10" id="uwy-uH-Y66"/>
                                                         <constraint firstItem="zTU-nv-rJi" firstAttribute="leading" secondItem="FWJ-Ed-xFc" secondAttribute="trailing" constant="8" id="xPq-40-GfF"/>
                                                         <constraint firstItem="0D8-A2-cgv" firstAttribute="top" secondItem="xFP-vv-K6X" secondAttribute="top" constant="11" id="zVU-Z9-JRc"/>
                                                     </constraints>
@@ -1266,4 +1265,7 @@
             <point key="canvasLocation" x="2733" y="1148"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Trash" width="50" height="50"/>
+    </resources>
 </document>
